--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.2.15",
+    "tailwindcss": "^3.0.7"
   }
 }
