--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
