--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.29.3",
     "types": "^0.1.1"
   },
   "devDependencies": {
